2005-10-24  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_get_offset), (gst_base_audio_sink_render):
	Remove g_print
	Use sync property from baseclass to disable sync.

2005-10-24  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_get_offset), (gst_base_audio_sink_render):
	Buffers with no timestamps get aligned with previous buffers or
	on underrun, played ASAP.

2005-10-24  Julien MOUTTE  <julien@moutte.net>

	* gst-libs/gst/video/video.h:
	* gst/ffmpegcolorspace/gstffmpegcodecmap.c:
	* sys/ximage/ximagesink.c: (gst_ximagesink_xcontext_get):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_get_xv_support): And
	here comes my change on caps for framerate and geometry range.
	We are now accepting 1 to MAXINT for width and height, and from
	0.0 to MAXDOUBLE for framerate. That allows duration less png frames
	to be blended correctly in videomixer.

2005-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  back to HEAD

=== release 0.9.4 ===

2005-10-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* NEWS:
	* RELEASE:
	* configure.ac:
	  releasing 0.9.4, "Velociraptor"

2005-10-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ogg/gstoggdemux.c: (gst_ogg_demux_loop):
	* po/POTFILES.in:
	  STOPPED -> FAILED

2005-10-21  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstdecodebin.c: (gst_decode_bin_init),
	(gst_decode_bin_dispose), (free_dynamics), (pad_unblocked),
	(pad_blocked), (close_pad_link), (new_pad):
	Don't try to remove elements twice.

2005-10-21  Wim Taymans  <wim@fluendo.com>

	* ext/theora/theoradec.c: (theora_dec_src_query),
	(theora_dec_sink_event):
	* ext/vorbis/vorbisdec.c: (vorbis_dec_src_query),
	(vorbis_dec_sink_event), (vorbis_handle_identification_packet),
	(vorbis_handle_data_packet):
	* ext/vorbis/vorbisdec.h:
	Fix old naming.

	* gst-libs/gst/audio/gstbaseaudiosink.c: