@@ -1,3 +1,9 @@
+2005-10-24  Julien MOUTTE  <julien@moutte.net>
+
+	* sys/ximage/ximagesink.c: (gst_ximagesink_setcaps):
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_setcaps): Check
+	the caps against our xcontext caps.
+
 2005-10-24  Wim Taymans  <wim@fluendo.com>
 
 	* gst-libs/gst/audio/gstbaseaudiosink.c:
